      want to (mis)use it for some purpose ("fixed" in all current MIDI
      input drivers: ALSA, CoreMIDI, JACK, MidiShare, MME)

  * instruments database:
    - avoid time consuming samples scanning when adding instruments
      to the instruments database
    - added support for handling lost files in the instruments database

  * Gigasampler format engine:
    - fixed a memory leak that could happen when a channel was deleted
      while notes were playing
    - made it possible to load an instrument even if the audio thread
      isn't running
    - added partial support for the "Controller Triggered" MIDI rule,
      enough for piano gigs with pedal noise samples
    - minor fix: only mark FX sends as being modified if really the
      respective FX send MIDI controller was used
    - added support for GM global device volume SysEx message
      (can be selected at compile time to either apply globally to the
      whole sampler [default] or only to the sampler channels that are
      connected to the respective MIDI input port the SysEx message arrived
      on)
    - bugfix: notes triggered at position 0 in the audio buffer were
      sometimes wrongly killed in the same buffer, causing no sound to
      be played
    - added support for chromatic / drumkit mode Roland GS Sysex message
      which is usally used to switch a part between chromatic sounds and
      drumkit sounds (as opposed to their common default setting of MIDI
      part 10 being a drumkit part and all other ones chromatic parts), in
      LS however one can switch between the first 16 MIDI instrument maps
      defined for the sampler
    - made it possible to create multiple sample channels even if the
      audio thread isn't running

  * LSCP server:
    - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain sampler channels (so far only
      Note-On and Note-Off events are sent via this LSCP event)