@@ -93,6 +93,10 @@ namespace LinuxSampler {
              */
             static void WalkDirectoryTree(std::string Dir, DirectoryWalker* pWalker);
             
+			std::string basename(std::string path);
+
+			std::string basename(std::string path, std::string sep);
+
             static char DirSeparator;
 
         private:
